# tally

./: .gitignore  404.html  New Features.txt  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  forge.config.js  index.html  index.txt  manifest.webmanifest  package-lock.json  package.json  run.txt  sw.js  vite.config.js
.github/: FUNDING.yml
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
eula/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.eula.__PAGE__.txt  __next.eula.txt  index.html  index.txt
online/: answer-format.js  index.html  manifest.webmanifest  parser.js  preload.js  settings.js  sw.js  units.json
privacy/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.privacy.__PAGE__.txt  __next.privacy.txt  index.html  index.txt
scripts/: build-pwa.cjs  organize-build.cjs  package-msix.cjs  release.mjs  sync-version.mjs
src/: answer-format.js  index.css  index.html  index.js  main.js  parser.js  platform-api.js  preload.js  pwa-api.js  renderer.js  settings.js  syntax-highlight.js  version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: answer-format.test.mjs  parser.test.mjs  platform-modules.test.mjs  stocks.test.mjs  weather.test.mjs
usage/: __next._full.txt  __next._head.txt  __next._index.txt  (+5 more)
(+69 files in other folders)
