[package]
name = "tally"
version = "2.1.0"
description = "A simple calculator for your daily tasks."
authors = ["aidan846 <lando.aidan@gmail.com>"]
edition = "2021"

[lib]
name = "tally_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
